--- a/EngineStateManager.csproj
+++ b/EngineStateManager.csproj
@@ -2,7 +2,7 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{12AD2EF7-004C-4F1F-96BD-B5DD4634C4E2}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -20,6 +20,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
+    <WarningLevel>3</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ScriptHookVDotNet3">
@@ -32,7 +33,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AircraftEnginePersistence.cs" />
+    <Compile Include="ModLoadNotification.cs" />
+    <Compile Include="EngineOverrideBus.cs" />
     <Compile Include="EngineStateControl.cs" />
+    <Compile Include="MainPersist.cs" />
     <Compile Include="ModLogger.cs" />
     <Compile Include="NativeCompat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
