--- a/bin/x64/Release/EngineStateManager.ini
+++ b/bin/x64/Release/EngineStateManager.ini
@@ -1,7 +1,6 @@
 [Notifications]
 ; Toggles notifications (true/false)
 Enabled=true
-LoadText=Functions Hooked Successfully.
 
 [EngineToggleKeys]
 ; Master enable/disable for the keypress engine toggle feature
@@ -22,14 +21,26 @@ DisableAutoStart=true
 ; If true, helicopter engines will stay running when exiting them.
 EnableHeliPersistence=true
 
-; \\PLANE ENGINE PERSISTENCE IS EXPERIMENTAL AND NOT RECOMMENDED-\\
-; \\USE IN A REGULAR PLAYTHROUGH! FOR MORE DETAILS SEE README\\\\\\
-; Engine state toggle for planes (true/false)
+; Engine state toggle for planes (true/false) 
 ; If true, plane engines will stay running when exiting them.
-EnablePlanePersistence=false
+; Plane persistence is BETA so expect small bugs.
+EnablePlanePersistence=true
 
-; Max number of aircraft to keep alive (default 20)
+; Disables plane stalling when rapidly slowing (true/false)
+DisableAircraftStallingWhenSlow=false 
+
+; Disables stalling when an aircrafts engine is damaged (true/false)
+DisableDamagedAircraftStalling=false    
+
+; Max number of aircraft to keep alive (LRU eviction)
+; 0 = disable aircraft persistence tracking; 1 = Default GTA5 behavior (only 1 car persisted)
+; default: 20
 MaxTrackedAircraft=20
+
+; Max number of persisted CARS at once (LRU eviction)
+; 0 = disable car persistence tracking; 1 = Default GTA5 behavior (only 1 car persisted)
+; default: 20 
+MaxTrackedVehicle=20
 
 ; How often (ms) to check/enforce aircraft (default 400 which is very light)
 ; Higher = less CPU/hitching, lower = stronger enforcement
@@ -40,7 +51,7 @@ UpdateIntervalMs=400
 ReassertPerAircraftMs=1000
 
 ; Distance cutoff (in feet) for tracking. -1 = infinite persistence anywhere on the map.
-; default: 2000.0 
+; Set 0 to disable vehicle tracking/persistence altogether, default: 2000.0
 MaxDistanceToTrack=2000 
 
 ; If true, we only force engine ON when we detect it's OFF (reduces spam).
@@ -54,7 +65,7 @@ ForceHeliBladesFullSpeedAfterExit=true
 ; Sets jet RPM to idle after exit (default 0.10)
 JetIdleRpm=0.10
 
-; Debug
+[Debug]
 EnableDebugLogging=false
 DebugLogFile=EngineStateManager.log
 
